:bug: Fix dashboard styles - Update copiableText not to propagate the event - Fix not to show the scrollbar on grid - Fix z index for dialog - Remove console

--- a/framework-plugins/lisk-framework-dashboard-plugin/src/ui/components/dialog/Dialog.module.scss
+++ b/framework-plugins/lisk-framework-dashboard-plugin/src/ui/components/dialog/Dialog.module.scss
@@ -29,7 +29,7 @@
 	left: 0;
 	transform: scale(1);
 	overflow: auto;
-	z-index: 2;
+	z-index: 10;
 }
 
 .background {
@@ -50,7 +50,7 @@
 
 	margin: 130px auto;
 
-	max-width: 50%;
+	width: 80%;
 
 	@include mq-down('md') {
 		max-width: 80%;
